--- a/environmenthotels.css
+++ b/environmenthotels.css
@@ -2,11 +2,13 @@
     display: grid;
     grid-gap: 10px;
     background-color: #7bee8b;
+    background-image: linear-gradient(#4dc74d,lightgreen);
     padding: 10px;
   }
   
   .grid-item {
     background-color: rgba(239, 245, 237, 0.8);
+    background-image: linear-gradient(to right,#48c748,lightgreen);
     text-align: center;
     padding: 20px;
     font-size: 30px;
