--- a/plasticunfriendlyhotels.css
+++ b/plasticunfriendlyhotels.css
@@ -2,11 +2,13 @@
     display: grid;
     grid-gap: 10px;
     background-color: #d3f37b;
+    background-image: linear-gradient(#ffcb6b,yellow);
     padding: 10px;
   }
   
   .grid-item {
     background-color: rgba(243, 245, 237, 0.8);
+    background-image: linear-gradient(to right,rgb(255 242 90), rgb(255 238 154));
     text-align: center;
     padding: 20px;
     font-size: 25px;
