--- a/ragispoons.css
+++ b/ragispoons.css
@@ -2,11 +2,13 @@
     display: grid;
     grid-gap: 10px;
     background-color: #2196F3;
+    background-image: linear-gradient(#007eff,lightblue);
     padding: 10px;
   }
   
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
+    background-image: linear-gradient(to right,#00adff,lightblue);
     text-align: center;
     padding: 20px;
     font-size: 20px;
