--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@
     width: 100%;
     height: 1018px;
     opacity: 0.4;
+    
   }
 
   .image2 {
@@ -32,9 +33,11 @@
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .image3 {
     float: left;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     /* position: absolute;  */
   }
